Fix alignment issue in navigation and add margin to social icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ nav{
     position: relative;
     display: flex;
     justify-content: center;
-    align-items: justify;
+    align-items:justify;
     min-height: 80vh;
     flex-direction: column;
     width: 50%;
@@ -204,6 +204,7 @@ nav{
     align-items: center;
     width: 40px;
     height: 40px;
+    margin-inline: 10px;
     border-radius: 50%;
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
     cursor: pointer;
